--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
     </header>
     <div class="products-page">
         <div class="product-box">
-            <img src="product1.jpg" alt="Product 1" class="product-image">
+            <img src="images/product1.jpg" alt="Product 1" class="product-image">
             <div class="product-details">
                 <h2 class="product-name">Electronic Product 1</h2>
                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -27,7 +27,7 @@
         </div>
     
         <div class="product-box">
-            <img src="product2.jpg" alt="Product 2" class="product-image">
+            <img src="images/product2.jpeg" alt="Product 2" class="product-image">
             <div class="product-details">
                 <h2 class="product-name">Electronic Product 2</h2>
                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="product3.jpg" alt="Product 3" class="product-image">
+            <img src="images/product3.jpeg" alt="Product 3" class="product-image">
             <div class="product-details">
                 <h2 class="product-name">Electronic Product 3</h2>
                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="product-box">
-            <img src="product3.jpg" alt="Product 4" class="product-image">
+            <img src="images/product4.jpeg" alt="Product 4" class="product-image">
             <div class="product-details">
                 <h2 class="product-name">Electronic Product 4</h2>
                 <p class="product-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
